qt6/gen_qabstractitemview.h

class QAbstractItemDelegate;
class QAbstractItemModel;
class QAbstractItemView;
class QItemSelectionModel;
class QMetaObject;
class QModelIndex;
class QPoint;
class QRect;
class QSize;
class QWidget;
typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QAbstractItemView QAbstractItemView;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QWidget QWidget;
bool QAbstractItemView_override_virtual_sharedPainter(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_childEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_childEvent(void* self, QChildEvent* event);
bool QAbstractItemView_override_virtual_customEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_customEvent(void* self, QEvent* event);
bool QAbstractItemView_override_virtual_connectNotify(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QAbstractItemView_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QAbstractItemView_staticMetaObject();
void QAbstractItemView_delete(QAbstractItemView* self);