qt6/gen_qabstractitemview.nim

proc fcQAbstractItemView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_sharedPainter".}
proc fQAbstractItemView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_childEvent".}
proc fcQAbstractItemView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_childEvent".}
proc fQAbstractItemView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_customEvent".}
proc fcQAbstractItemView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_customEvent".}
proc fQAbstractItemView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QAbstractItemView_virtualbase_connectNotify".}
proc fcQAbstractItemView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_connectNotify".}
proc fQAbstractItemView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QAbstractItemView_virtualbase_disconnectNotify".}
proc fcQAbstractItemView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_disconnectNotify".}
proc fcQAbstractItemView_staticMetaObject(): pointer {.importc: "QAbstractItemView_staticMetaObject".}
proc fcQAbstractItemView_delete(self: pointer) {.importc: "QAbstractItemView_delete".}


func init*(T: type QAbstractItemView, h: ptr cQAbstractItemView): QAbstractItemView =
  T(h: h)
proc create*(T: type QAbstractItemView, parent: gen_qwidget.QWidget): QAbstractItemView =

  QAbstractItemView.init(fcQAbstractItemView_new(parent.h))
proc create*(T: type QAbstractItemView, ): QAbstractItemView =

  QAbstractItemView.init(fcQAbstractItemView_new2())
proc metaObject*(self: QAbstractItemView, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQAbstractItemView_metaObject(self.h))

proc metacast*(self: QAbstractItemView, param1: cstring): pointer =

  fcQAbstractItemView_metacast(self.h, param1)

proc metacall*(self: QAbstractItemView, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQAbstractItemView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QAbstractItemView, s: cstring): string =

  let v_ms = fcQAbstractItemView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setModel*(self: QAbstractItemView, model: gen_qabstractitemmodel.QAbstractItemModel): void =

  fcQAbstractItemView_setModel(self.h, model.h)

proc model*(self: QAbstractItemView, ): gen_qabstractitemmodel.QAbstractItemModel =

  gen_qabstractitemmodel.QAbstractItemModel(h: fcQAbstractItemView_model(self.h))

proc setSelectionModel*(self: QAbstractItemView, selectionModel: gen_qitemselectionmodel.QItemSelectionModel): void =

  fcQAbstractItemView_setSelectionModel(self.h, selectionModel.h)

proc selectionModel*(self: QAbstractItemView, ): gen_qitemselectionmodel.QItemSelectionModel =

  gen_qitemselectionmodel.QItemSelectionModel(h: fcQAbstractItemView_selectionModel(self.h))

proc setItemDelegate*(self: QAbstractItemView, delegate: gen_qabstractitemdelegate.QAbstractItemDelegate): void =

  fcQAbstractItemView_setItemDelegate(self.h, delegate.h)

proc itemDelegate*(self: QAbstractItemView, ): gen_qabstractitemdelegate.QAbstractItemDelegate =

  gen_qabstractitemdelegate.QAbstractItemDelegate(h: fcQAbstractItemView_itemDelegate(self.h))

proc setSelectionMode*(self: QAbstractItemView, mode: QAbstractItemViewSelectionMode): void =

  fcQAbstractItemView_setSelectionMode(self.h, cint(mode))

proc selectionMode*(self: QAbstractItemView, ): QAbstractItemViewSelectionMode =

  QAbstractItemViewSelectionMode(fcQAbstractItemView_selectionMode(self.h))

proc setSelectionBehavior*(self: QAbstractItemView, behavior: QAbstractItemViewSelectionBehavior): void =

  fcQAbstractItemView_setSelectionBehavior(self.h, cint(behavior))

proc selectionBehavior*(self: QAbstractItemView, ): QAbstractItemViewSelectionBehavior =

  QAbstractItemViewSelectionBehavior(fcQAbstractItemView_selectionBehavior(self.h))

proc currentIndex*(self: QAbstractItemView, ): gen_qabstractitemmodel.QModelIndex =

  gen_qabstractitemmodel.QModelIndex(h: fcQAbstractItemView_currentIndex(self.h))

proc rootIndex*(self: QAbstractItemView, ): gen_qabstractitemmodel.QModelIndex =

  gen_qabstractitemmodel.QModelIndex(h: fcQAbstractItemView_rootIndex(self.h))

proc setEditTriggers*(self: QAbstractItemView, triggers: QAbstractItemViewEditTrigger): void =

  fcQAbstractItemView_setEditTriggers(self.h, cint(triggers))

proc editTriggers*(self: QAbstractItemView, ): QAbstractItemViewEditTrigger =

  QAbstractItemViewEditTrigger(fcQAbstractItemView_editTriggers(self.h))

proc setVerticalScrollMode*(self: QAbstractItemView, mode: QAbstractItemViewScrollMode): void =

  fcQAbstractItemView_setVerticalScrollMode(self.h, cint(mode))

proc verticalScrollMode*(self: QAbstractItemView, ): QAbstractItemViewScrollMode =

  QAbstractItemViewScrollMode(fcQAbstractItemView_verticalScrollMode(self.h))

proc resetVerticalScrollMode*(self: QAbstractItemView, ): void =

  fcQAbstractItemView_resetVerticalScrollMode(self.h)

proc setHorizontalScrollMode*(self: QAbstractItemView, mode: QAbstractItemViewScrollMode): void =

  fcQAbstractItemView_setHorizontalScrollMode(self.h, cint(mode))

proc horizontalScrollMode*(self: QAbstractItemView, ): QAbstractItemViewScrollMode =

  QAbstractItemViewScrollMode(fcQAbstractItemView_horizontalScrollMode(self.h))

proc resetHorizontalScrollMode*(self: QAbstractItemView, ): void =

  fcQAbstractItemView_resetHorizontalScrollMode(self.h)

proc setAutoScroll*(self: QAbstractItemView, enable: bool): void =

  fcQAbstractItemView_setAutoScroll(self.h, enable)

proc hasAutoScroll*(self: QAbstractItemView, ): bool =

  fcQAbstractItemView_hasAutoScroll(self.h)

proc setAutoScrollMargin*(self: QAbstractItemView, margin: cint): void =

  fcQAbstractItemView_setAutoScrollMargin(self.h, margin)

proc autoScrollMargin*(self: QAbstractItemView, ): cint =

  fcQAbstractItemView_autoScrollMargin(self.h)

proc setTabKeyNavigation*(self: QAbstractItemView, enable: bool): void =

  fcQAbstractItemView_setTabKeyNavigation(self.h, enable)

proc tabKeyNavigation*(self: QAbstractItemView, ): bool =

  fcQAbstractItemView_tabKeyNavigation(self.h)

proc setDropIndicatorShown*(self: QAbstractItemView, enable: bool): void =

  fcQAbstractItemView_setDropIndicatorShown(self.h, enable)

proc showDropIndicator*(self: QAbstractItemView, ): bool =

  fcQAbstractItemView_showDropIndicator(self.h)

proc setDragEnabled*(self: QAbstractItemView, enable: bool): void =

  fcQAbstractItemView_setDragEnabled(self.h, enable)

proc dragEnabled*(self: QAbstractItemView, ): bool =

  fcQAbstractItemView_dragEnabled(self.h)

proc setDragDropOverwriteMode*(self: QAbstractItemView, overwrite: bool): void =

  fcQAbstractItemView_setDragDropOverwriteMode(self.h, overwrite)

proc dragDropOverwriteMode*(self: QAbstractItemView, ): bool =

  fcQAbstractItemView_dragDropOverwriteMode(self.h)

proc setDragDropMode*(self: QAbstractItemView, behavior: QAbstractItemViewDragDropMode): void =

  fcQAbstractItemView_setDragDropMode(self.h, cint(behavior))

proc dragDropMode*(self: QAbstractItemView, ): QAbstractItemViewDragDropMode =

  QAbstractItemViewDragDropMode(fcQAbstractItemView_dragDropMode(self.h))

proc setDefaultDropAction*(self: QAbstractItemView, dropAction: gen_qnamespace.DropAction): void =

  fcQAbstractItemView_setDefaultDropAction(self.h, cint(dropAction))

proc defaultDropAction*(self: QAbstractItemView, ): gen_qnamespace.DropAction =

  gen_qnamespace.DropAction(fcQAbstractItemView_defaultDropAction(self.h))

proc setAlternatingRowColors*(self: QAbstractItemView, enable: bool): void =

  fcQAbstractItemView_setAlternatingRowColors(self.h, enable)

proc alternatingRowColors*(self: QAbstractItemView, ): bool =

  fcQAbstractItemView_alternatingRowColors(self.h)

proc setIconSize*(self: QAbstractItemView, size: gen_qsize.QSize): void =

  fcQAbstractItemView_setIconSize(self.h, size.h)

proc iconSize*(self: QAbstractItemView, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQAbstractItemView_iconSize(self.h))

proc setTextElideMode*(self: QAbstractItemView, mode: gen_qnamespace.TextElideMode): void =

  fcQAbstractItemView_setTextElideMode(self.h, cint(mode))

proc textElideMode*(self: QAbstractItemView, ): gen_qnamespace.TextElideMode =

  gen_qnamespace.TextElideMode(fcQAbstractItemView_textElideMode(self.h))

proc keyboardSearch*(self: QAbstractItemView, search: string): void =

  fcQAbstractItemView_keyboardSearch(self.h, struct_miqt_string(data: search, len: csize_t(len(search))))

proc visualRect*(self: QAbstractItemView, index: gen_qabstractitemmodel.QModelIndex): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQAbstractItemView_visualRect(self.h, index.h))

proc scrollTo*(self: QAbstractItemView, index: gen_qabstractitemmodel.QModelIndex, hint: QAbstractItemViewScrollHint): void =

  fcQAbstractItemView_scrollTo(self.h, index.h, cint(hint))

proc indexAt*(self: QAbstractItemView, point: gen_qpoint.QPoint): gen_qabstractitemmodel.QModelIndex =

  gen_qabstractitemmodel.QModelIndex(h: fcQAbstractItemView_indexAt(self.h, point.h))

proc sizeHintForIndex*(self: QAbstractItemView, index: gen_qabstractitemmodel.QModelIndex): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQAbstractItemView_sizeHintForIndex(self.h, index.h))

proc sizeHintForRow*(self: QAbstractItemView, row: cint): cint =

  fcQAbstractItemView_sizeHintForRow(self.h, row)

proc sizeHintForColumn*(self: QAbstractItemView, column: cint): cint =

  fcQAbstractItemView_sizeHintForColumn(self.h, column)

proc openPersistentEditor*(self: QAbstractItemView, index: gen_qabstractitemmodel.QModelIndex): void =

  fcQAbstractItemView_openPersistentEditor(self.h, index.h)

proc closePersistentEditor*(self: QAbstractItemView, index: gen_qabstractitemmodel.QModelIndex): void =

  fcQAbstractItemView_closePersistentEditor(self.h, index.h)

proc isPersistentEditorOpen*(self: QAbstractItemView, index: gen_qabstractitemmodel.QModelIndex): bool =

  fcQAbstractItemView_isPersistentEditorOpen(self.h, index.h)

proc setIndexWidget*(self: QAbstractItemView, index: gen_qabstractitemmodel.QModelIndex, widget: gen_qwidget.QWidget): void =

  fcQAbstractItemView_setIndexWidget(self.h, index.h, widget.h)

proc indexWidget*(self: QAbstractItemView, index: gen_qabstractitemmodel.QModelIndex): gen_qwidget.QWidget =

  gen_qwidget.QWidget(h: fcQAbstractItemView_indexWidget(self.h, index.h))

proc setItemDelegateForRow*(self: QAbstractItemView, row: cint, delegate: gen_qabstractitemdelegate.QAbstractItemDelegate): void =

  fcQAbstractItemView_setItemDelegateForRow(self.h, row, delegate.h)

proc itemDelegateForRow*(self: QAbstractItemView, row: cint): gen_qabstractitemdelegate.QAbstractItemDelegate =

  gen_qabstractitemdelegate.QAbstractItemDelegate(h: fcQAbstractItemView_itemDelegateForRow(self.h, row))

proc setItemDelegateForColumn*(self: QAbstractItemView, column: cint, delegate: gen_qabstractitemdelegate.QAbstractItemDelegate): void =

  fcQAbstractItemView_setItemDelegateForColumn(self.h, column, delegate.h)

proc itemDelegateForColumn*(self: QAbstractItemView, column: cint): gen_qabstractitemdelegate.QAbstractItemDelegate =

  gen_qabstractitemdelegate.QAbstractItemDelegate(h: fcQAbstractItemView_itemDelegateForColumn(self.h, column))

proc itemDelegateWithIndex*(self: QAbstractItemView, index: gen_qabstractitemmodel.QModelIndex): gen_qabstractitemdelegate.QAbstractItemDelegate =

  gen_qabstractitemdelegate.QAbstractItemDelegate(h: fcQAbstractItemView_itemDelegateWithIndex(self.h, index.h))
